Passando DBContext para uma livraria.
